--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
 title: Bem Vindo a Vidav Home
-Description:Feel Free to Bookmark this to keep a eye on my project updates
+description: Feel Free to Bookmark this to keep a eye on my project updates
