--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-architect
+theme: jekyll-theme-tactile
 title: Bem Vindo a Vidav Home
 description: Feel Free to Bookmark this to keep a eye on my project updates
