--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 theme: jekyll-theme-cayman
-title: Bem Vindo a Vidav 
+<p align = "center">
+ <img src ="https://github.com/Vinimoura/vidav/blob/master/eleve%20vida%20logo.jpg">
+</p>
+title: Bem Vindo a Elëve Vidav 
 description: O Caminho segue por aqui 
