--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-cayman
+markdown: kramdown
 <p align = "center">
  <img src ="https://github.com/Vinimoura/vidav/blob/master/eleve%20vida%20logo.jpg">
 </p>
