--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-cayman
 markdown: kramdown
+plugins: jemoji
 title: Bem Vindo a Elëve Vidav 
 description: O Caminho segue por aqui 
