--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,4 @@ theme: jekyll-theme-cayman
 markdown: kramdown
 title: Bem Vindo a Elëve Vidav 
 description: O Caminho segue por aqui 
-plugins: 
-  - jemoji
+plugins: jemoji
