--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
-markdown: kramdown
 title: Bem Vindo a Elëve Vidav 
 description: O Caminho segue por aqui 
 plugins:
   - jemoji
+  -kramdown
