--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,10 @@ title: Bem Vindo a Elëve Vidav
 description: O Caminho segue por aqui
 mardown: kramdown
 kramdown:
+  syntax_highlighter: rouge
   input: GFM
+  auto_ids:       true
+  toc_levels:     1..3
 plugins:
   - jemoji
   - jekyll-mentions
